# docs/swagger.json
@@ -90,7 +90,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pagination.Pagination"
+                            "$ref": "#/definitions/car.CarListResponse"
                         }
                     },
                     "500": {
@@ -363,7 +363,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pagination.Pagination"
+                            "$ref": "#/definitions/reservation.ReservationListResponse"
                         }
                     },
                     "500": {
@@ -526,6 +526,33 @@
                 }
             }
         },
+        "car.CarListResponse": {
+            "type": "object",
+            "properties": {
+                "cars": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/car.CarResponse"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "q": {
+                    "type": "string"
+                },
+                "rows": {},
+                "total_pages": {
+                    "type": "integer"
+                },
+                "total_rows": {
+                    "type": "integer"
+                }
+            }
+        },
         "car.CarRequest": {
             "type": "object",
             "properties": {
@@ -585,6 +612,32 @@
                 },
                 "vendor": {
                     "$ref": "#/definitions/vendors.VendorResponse"
+                }
+            }
+        },
+        "car.CarSimpleResponse": {
+            "type": "object",
+            "properties": {
+                "fuel": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "office": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "transmission": {
+                    "type": "string"
+                },
+                "vendor": {
+                    "type": "string"
                 }
             }
         },
@@ -749,10 +802,38 @@
                 }
             }
         },
+        "reservation.ReservationListResponse": {
+            "type": "object",
+            "properties": {
+                "cars": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reservation.ReservationResponse"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "q": {
+                    "type": "string"
+                },
+                "rows": {},
+                "total_pages": {
+                    "type": "integer"
+                },
+                "total_rows": {
+                    "type": "integer"
+                }
+            }
+        },
         "reservation.ReservationRequest": {
             "type": "object",
             "required": [
                 "car_id",
+                "driver_request",
                 "drop_off_date",
                 "drop_off_time",
                 "dropoff_location_id",
@@ -798,7 +879,7 @@
             "type": "object",
             "properties": {
                 "car": {
-                    "$ref": "#/definitions/car.CarResponse"
+                    "$ref": "#/definitions/car.CarSimpleResponse"
                 },
                 "driver_response": {
                     "$ref": "#/definitions/driver.DriverResponse"
