# internal/car/serializers.go
@@ -2,11 +2,13 @@ package car
 
 import (
 	"errors"
+	"fmt"
 
 	"github.com/eibrahimarisoy/car_rental/internal/models"
 	"github.com/eibrahimarisoy/car_rental/internal/office"
 	"github.com/eibrahimarisoy/car_rental/internal/vendors"
 	"github.com/eibrahimarisoy/car_rental/pkg/errorHandler"
+	pgHelper "github.com/eibrahimarisoy/car_rental/pkg/pagination"
 	"github.com/google/uuid"
 )
 
@@ -76,12 +78,56 @@ type CarResponse struct {
 
 // FromCar converts a car to a response
 func (res *CarResponse) FromCar(car *models.Car) {
-
 	res.ID = car.ID
 	res.Status = *car.Status
 	res.Name = *car.Name
 	res.Fuel = car.Fuel.String()
 	res.Transmission = car.Transmission.String()
-	res.Vendor = vendors.VendorResponse(res.Vendor)
-	res.Office = office.OfficeResponse(res.Office)
+	vendor := car.Vendor
+	res.Vendor = *vendors.VendorToResponse(&vendor)
+	office_ := car.Office
+	res.Office = *office.OfficeToResponse(&office_)
+}
+
+type CarListResponse struct {
+	pgHelper.Pagination
+	Cars []CarResponse `json:"cars"`
+}
+
+// CarsToCarListResponse converts a list of cars to a car list response
+func CarsToCarListResponse(cars *[]models.Car, pagination *pgHelper.Pagination) *CarListResponse {
+	res := &CarListResponse{
+		Pagination: *pagination,
+		Cars:       []CarResponse{},
+	}
+	for _, car := range *cars {
+		res.Cars = append(res.Cars, CarResponse{})
+		res.Cars[len(res.Cars)-1].FromCar(&car)
+	}
+	return res
+}
+
+type CarSimpleResponse struct {
+	ID           uuid.UUID             `json:"id"`
+	Status       models.CarStatusEnums `json:"status"`
+	Name         string                `json:"name"`
+	Fuel         string                `json:"fuel"`
+	Transmission string                `json:"transmission"`
+	Vendor       string                `json:"vendor"`
+	Office       string                `json:"office"`
+}
+
+// CarToCarSimpleResponse converts a car to a car list response
+func CarToCarSimpleResponse(car *models.Car) *CarSimpleResponse {
+	fmt.Println(car.Vendor)
+	res := &CarSimpleResponse{
+		ID:           car.ID,
+		Status:       *car.Status,
+		Name:         *car.Name,
+		Fuel:         car.Fuel.String(),
+		Transmission: car.Transmission.String(),
+		Vendor:       car.Vendor.ID.String(),
+		Office:       car.Office.ID.String(),
+	}
+	return res
 }
